test/fail/M0026.mo
module Ab { };

let _ : A.Foo = ();
